--- a/debian-allinone-playbook.yml
+++ b/debian-allinone-playbook.yml
@@ -1,32 +1,16 @@
 ---
-- hosts: allinone
+- name: Zabbix deployment + Grafana integration
+  hosts: allinone
   become: yes
   
   vars_files:
     - my_vault.yml
     - vars.yml
-
+    
   vars:
     - ansible_become_pass: "{{ su_password }}"
 
   pre_tasks:
-    - name: Ensure the locale exists
-      tags: locale
-      locale_gen:
-        name: en_US.UTF-8
-        state: present
-
-    - name: set default locale
-      tags: locale
-      command: localectl set-locale LANG=en_US.UTF-8 
-
-    - name: install updates
-      tags: package
-      apt: 
-        upgrade: yes
-        update_cache: yes
-      when: ansible_distribution == "Debian"
-
     # [WARNING]: Module remote_tmp /root/.ansible/tmp did not exist and was created
     # with a mode of 0700, this may cause issues when running as another user. To
     # avoid this, create the remote_tmp dir with the correct permissions manually
@@ -35,176 +19,10 @@
         path: /root/.ansible/remote_tmp
         state: directory
         mode: "1777"
-
-  tasks:
-    - name: Install Zabbix repository
-      tags: package
-      apt:
-        deb: https://repo.zabbix.com/zabbix/6.4/debian/pool/main/z/zabbix-release/zabbix-release_6.4-1+debian12_all.deb
-
-    - name: Update cache
-      tags: package
-      apt:
-        update_cache: yes
-
-    - name: Install zabbix server
-      tags: package
-      apt: 
-        name:
-          - zabbix-server-pgsql
-          - zabbix-agent
-
-    - name: Configure the database for ZABBIX server - set password
-      tags: config
-      lineinfile:
-        path: /etc/zabbix/zabbix_server.conf 
-        regexp: "^# DBPassword="
-        line: DBPassword=zabbix
-        state: present
-
-    - name: Install postgres packages
-      tags: postgres,package
-      apt: "name={{ item }} state=present"
-      with_items:
-        - postgresql
-        - postgresql-client
-        - python3-psycopg2
-
-    - name: Install ZABBIX packages
-      tags: zabbix,package
-      apt: "name={{ item }}  state=present"
-      with_items:
-        - zabbix-sql-scripts 
-        - zabbix-frontend-php 
-        - php8.2-pgsql 
-        - zabbix-nginx-conf
   
-    - name: Create PostgreSQL user zabbix
-      tags: createpostgres
-      become_user: postgres
-      postgresql_user:
-        name: "{{ db_user }}"
-        password: "{{ db_password }}"
-        state: present
-
-    - name: Create PostgreSQL database 'zabbix'
-      become: yes
-      become_user: postgres
-      ansible.builtin.postgresql_db:
-        name: zabbix
-        owner: zabbix
-        state: present
-
-    - name: Import zabbix db
-      tags: import
-      shell: sh -c 'zcat /usr/share/zabbix-sql-scripts/postgresql/server.sql.gz | sudo -u zabbix psql zabbix || /bin/true'
-
-    - name: Configure PHP for Zabbix frontend 'listen'
-      tags: conf
-      lineinfile:
-        path: /etc/zabbix/nginx.conf
-        regexp: '^#\s*listen\s+\d+;'
-        line:  "\tlisten\t80;"
-        state: present
-
-    - name: Configure PHP for Zabbix frontend 'server_name'
-      tags: conf
-      lineinfile:
-        path: /etc/zabbix/nginx.conf
-        regexp: '^#\s*server_name\s+([^\s;]+)\s*;'
-        line:  "\tserver_name\t{{ groups['allinone'][0] }};"
-        state: present
-
-    - name: Copy setup wizard config
-      tags: copy
-      copy:
-        src: zabbix-all.conf.php
-        dest: /etc/zabbix/web/zabbix.conf.php
-        owner: www-data
-        group: www-data
-        mode: 0600
-
-    - name: Start and enable nginx
-      tags: services
-      service:
-        name: nginx
-        state: restarted 
-        enabled: yes
-
-    - name: Start and enable php8.2-fpm
-      tags: services
-      service:
-        name: php8.2-fpm
-        state: restarted 
-        enabled: yes
-
-    - name: Start zabbix server 
-      tags: services
-      service:
-        name: zabbix-server
-        state: restarted 
-        enabled: yes
-
-
-- name: Grafana & Zabbix integration
-  tags: grafana
-  hosts: allinone
-  become: yes
-
-  vars_files:
-    - my_vault.yml
-    - vars.yml
-
-  vars:
-    - ansible_become_pass: "{{ su_password }}"
-
-  tasks:
-    - name: install Grafana package
-      tags: grafana
-      apt:
-        deb: https://dl.grafana.com/enterprise/release/grafana-enterprise_10.0.2_amd64.deb
-        state: present
-
-    - name: Start and enable Grafana
-      tags: grafana
-
-      service:
-        name: grafana-server
-        state: started
-        enabled: yes
-
-    # - name: install zabbix plugin
-      # command: grafana-cli plugins install alexanderzobnin-zabbix-app
-
-    - name: Install/update Grafana Zabbix plugin
-      tags: grafana
-      community.grafana.grafana_plugin:
-        name: alexanderzobnin-zabbix-app
-        version: latest
-        state: present
-
-    - name: Restart Grafana
-      tags: grafana
-      service: 
-        name: grafana-server
-        state: restarted
-
-    - name: Wait for Grafana to restart
-      tags: grafana
-      wait_for:
-        timeout: 10
-
-    - name: Create Zabbix datasource
-      tags: grafana
-      community.grafana.grafana_datasource:
-        name: "datasource-zabbix"
-        grafana_url: "http://{{ groups['allinone'][0] }}:3000"
-        grafana_user: "admin"
-        grafana_password: "admin"
-        ds_type: "alexanderzobnin-zabbix-datasource"
-        ds_url: "http://{{ groups['allinone'][0] }}/api_jsonrpc.php"
-        zabbix_user: "Admin"
-        zabbix_password: "zabbix"
-        trends: true
-        time_field: "@timestamp"
-        access: direct
+  roles:
+    - debian
+    - zabbix
+    - postgresql
+    - nginx-zabbix
+    - grafana
